--- a/News/CSS/News.css
+++ b/News/CSS/News.css
@@ -1,3 +1,8 @@
+body{
+    background: rgba(241, 241, 241, 1.0);
+}
+
+
 
 /*top*/
 #top{
@@ -5,6 +10,7 @@
     overflow-y: scroll;
     margin-top: 20px;
     height: 350px;
+    background: white;
 }
 #topUL{
     position: absolute;
@@ -15,6 +21,7 @@
 
 #topUL li{
     display: inline-block;
+    vertical-align: center;
 }
 
 #topUL .topImage{
@@ -23,31 +30,48 @@
     background: rebeccapurple;
 }
 
-#topUL img{
-    width: 20px;
-    height: 20px;
-    background: coral;
-}
 
 #topUL .name{
     display: inline-block;
     padding-top: 15px;
     height: 30px;
-    font-size: 20px;
+    font-size: 18px;
     color: black;
-    background: palegoldenrod;
+}
+
+#topUL .info{
+    position: relative;
+    vertical-align: center;
+}
+
+#topUL img{
+    width: 20px;
+    height: 20px;
+    background: coral;
+    vertical-align: center;
 
 }
 
 #topUL label{
-    font-size: 15px;
+    margin-left: 10px;
+    margin-right: 15px;
+    font-size: 13px;
+    color: gainsboro;
+    vertical-align: center;
 }
-
 
 /*list*/
 #list{
-    margin-top: 20px;
+    margin-top: 10px;
     position: relative;
+    background: white;
+}
+
+#list li{
+    border-top-width: 0.2px;
+    border-top-color: gainsboro;
+    border-top-style: solid;
+    padding-top: 5px;
 }
 
 #list .topImage{
@@ -56,26 +80,34 @@
     background: rosybrown;
 }
 
+#list .name{
+    display: inline-block;
+    position: absolute;
+    margin-top: 5px;
+    left: 90px;
+    width: 60%;
+    height: 30px;
+    font-size: 18px;
+    color: black;
+    line-height: 20px;
+}
+
+#list .info{
+    display: inline-block;
+    max-width: 70%;
+    margin-bottom: 5px;
+}
+
 #list img{
     width: 15px;
     height: 15px;
     background: coral;
 }
 
-#list .name{
-    display: inline-block;
-    position: absolute;
-    top: 0px;
-    left: 90px;
-
-    width: 60%;
-    height: 30px;
-    font-size: 20px;
-    color: black;
-    background: palegoldenrod;
-    line-height: 20px;
-}
-
 #list label{
-    font-size: 14px;
+    margin-left: 10px;
+    margin-right: 15px;
+    font-size: 13px;
+    color: gainsboro;
+    vertical-align: center;
 }
