--- a/Util/CSS/Global.css
+++ b/Util/CSS/Global.css
@@ -17,7 +17,10 @@ body{
 .navigator{
     position: relative;
     overflow-y: scroll;
-
+    background: white;
+    border-bottom-width: 0.2px;
+    border-bottom-color: gainsboro;
+    border-bottom-style: solid;
 }
 
 #logo{
@@ -55,5 +58,6 @@ body{
     font-size: 18px;
     text-decoration:none;
     color: #1a1a1a;
+    outline: none;
 }
 
