--- a/Util/CSS/Global.css
+++ b/Util/CSS/Global.css
@@ -5,6 +5,7 @@ a, address, b, big, blockquote, body, center, cite, code, dd, del, div, dl, dt, 
 }
 
 body{
+    /*position: relative;*/
     max-width:640px;
     min-width:320px;
     margin-left: auto;
