首页 添加分页

--- a/HomePage/CSS/HomePage.css
+++ b/HomePage/CSS/HomePage.css
@@ -6,6 +6,9 @@
 }
 
  #scrollBoby{
+     position: absolute;
+     /*top:0;*/
+     left: 0;
      height: 100%;
      background: red;
 }
@@ -13,6 +16,8 @@
 .item{
     height: 100%;
     float: left;
+    text-align: center;
+    vertical-align: middle;
 }
 
 #home{
