--- a/HomePage/CSS/HomePage.css
+++ b/HomePage/CSS/HomePage.css
@@ -16,8 +16,9 @@
 .item{
     height: 100%;
     float: left;
-    text-align: center;
-    vertical-align: middle;
+    /*text-align: center;*/
+    /*vertical-align: middle;*/
+    overflow: auto;
 }
 
 #home{
