--- a/Partner/CSS/Partner.css
+++ b/Partner/CSS/Partner.css
@@ -1,11 +1,11 @@
 
-#getInfo{
+#inputDiv{
     position: relative;
 }
 
 #inputUL{
     position: absolute;
-    bottom: 3.6%;
+    top: 12%;
     margin-left: 5%;
     width: 90%;
     height: 8.65%;
