--- a/News/CSS/News.css
+++ b/News/CSS/News.css
@@ -26,8 +26,9 @@ body{
 
 #topUL .topImage{
     display: inline-block;
-    height: 100%;
+    height: 270px;
     background: rebeccapurple;
+    margin-left: 0px;
 }
 
 
@@ -45,11 +46,10 @@ body{
 }
 
 #topUL img{
-    width: 20px;
-    height: 20px;
-    background: coral;
+    width: 15px;
+    height: 15px;
     vertical-align: center;
-
+    margin-left: 12px;
 }
 
 #topUL label{
@@ -78,6 +78,7 @@ body{
     width: 80px;
     height: 80px;
     background: rosybrown;
+    margin-left: 10px;
 }
 
 #list .name{
@@ -101,7 +102,8 @@ body{
 #list img{
     width: 15px;
     height: 15px;
-    background: coral;
+    margin-left: 5px;
+    /*background: coral;*/
 }
 
 #list label{
