--- a/News/CSS/News.css
+++ b/News/CSS/News.css
@@ -7,7 +7,8 @@ body{
 /*top*/
 #top{
     position: relative;
-    overflow-y: scroll;
+    /*使用hidden用于 屏蔽手势滑动 造成内容滚动的效果*/
+    overflow-x: hidden;
     margin-top: 20px;
     height: 350px;
     background: white;
