修改导航条的适配问题

--- a/Partner/CSS/Partner.css
+++ b/Partner/CSS/Partner.css
@@ -6,17 +6,21 @@
 
 form{
     position: absolute;
-    top: 3%;
+    /*display: inline-block;*/
+    width: 90%;
+    top: 1%;
+    left: -10%;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
+    /*background: oldlace;*/
 }
 
 form input{
     display: inline-block;
-    margin-top: 30px;
+    margin-top: 25px;
     margin-left: 15px;
-    width: 60%;
-    height: 25px;
+    width: 65%;
+    height: 23px;
     font-size: 18px;
     border-bottom: 1px solid black;
     border-left:0;
@@ -31,7 +35,7 @@ form .submit{
     height: 30px;
     background: darkred;
     color: white;
-    font-size: 20px;
+    font-size: 18px;
     border-radius: 8px;
     border: 1px white;
     outline: none;
