--- a/News/CSS/News.css
+++ b/News/CSS/News.css
@@ -35,13 +35,14 @@ body{
     display: inline-block;
     padding-top: 15px;
     height: 30px;
-    font-size: 18px;
+    font-size: 15px;
     color: black;
 }
 
 #topUL .info{
     position: relative;
     vertical-align: center;
+    padding-top: 5px;
 }
 
 #topUL img{
@@ -87,7 +88,7 @@ body{
     left: 90px;
     width: 60%;
     height: 30px;
-    font-size: 18px;
+    font-size: 15px;
     color: black;
     line-height: 20px;
 }
@@ -108,7 +109,7 @@ body{
 #list label{
     margin-left: 10px;
     margin-right: 15px;
-    font-size: 13px;
+    font-size: 10px;
     color: gainsboro;
     vertical-align: center;
 }
